tests/e2e/semantics/head_const_output7.story
http server as client
    when client listen method:"post" path:"/foo" as res
        res.body = 2
